# chnlm

./: .env_template  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  dagster_Dockerfile  dagster_docker.yaml  docker-compose.yaml  pyproject.toml  rcell_definition.json  requirements.txt  root-ca.crt  workspace.yaml
src/ai_discovery/: README.md  __main__.py
src/ai_discovery/database/: README.md  abstract.py  dbsearch.py  pdf.py  pmc.py  query.py  tei.py  utils.py
src/ai_discovery/scripts/: 0-reset_db.py  1-get_pubmed_ids.py  2-download_pmc.py  3-download_abstract.py  4-download_pdf.py  drug_screening.py  fill_db.py  pdf_to_tei.py
src/ai_discovery/search/: chain.py  channels_drugs.py  contexts.py  features.py  ionchannels.csv  prompt.py  sql.py  utils.py
src/channelome_etl/: __init__.py  utils.py
src/channelome_etl/ai_discovery/: asset.py
src/channelome_etl/igor/: asset.py  sensor.py
src/channelome_etl/notification/: email.py  sensor.py  slack.py
src/channelome_etl/patchliner/: asset.py  main.py
src/channelome_etl/qpc/: asset.py  sensor.py
src/channelome_etl/syncropatch/: asset.py  sensor.py
src/igor/: __main__.py
src/igor/conversion/: main.py
src/igor/scripts/: README.md  rcell_create.py
src/nwb/: README.md
src/syncropatch/: README.md
src/syncropatch/analysis/: acell.py  quality.py  utils.py
src/syncropatch/conversion/: data.py  main.py  metadata.py  utils.py
src/syncropatch/plot/: main.py  utils.py
src/syncropatch/scripts/: acell_create.py  acells_to_csv.py  plot_exp.py  plot_pharma_exp.py  rcell_create.py
